unpackaged/main/default/objects/Campaign/fields/Business_Focus__c.field-meta.xml
<CustomField>
    <fullName>Business_Focus__c</fullName>
    <label>Business Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autodesk</fullName>
            </value>
            <value>
                <fullName>BIM</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Dassault Systemes</fullName>
            </value>
            <value>
                <fullName>Data Services</fullName>
            </value>
            <value>
                <fullName>MX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>