unpackaged/main/default/objects/Campaign/fields/Calendar_Period__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Period__c</fullName>
    <formula>"CY" &amp; RIGHT(TEXT(YEAR( StartDate )),2)

&amp;

CASE(MONTH( StartDate ),
1, "Q1" ,
2, "Q1",
3, "Q1",
4, "Q2",
5, "Q2",
6, "Q2",
7, "Q3",
8, "Q3",
9, "Q3",
10, "Q4",
11, "Q4",
12, "Q4",
"None")</formula>
    <label>Calendar Period</label>
    <type>Text</type>
</CustomField>