unpackaged/main/default/objects/Campaign/fields/Campaign_Expenses_Actual__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Expenses_Actual__c</fullName>
    <label>Campaign Expenses - Actual</label>
    <summarizedField>Campaign_Expenses__c.Actual_Cost__c</summarizedField>
    <summaryForeignKey>Campaign_Expenses__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>