unpackaged/main/default/objects/Campaign/fields/CampaignRecordTypeNameAuto__c.field-meta.xml
<CustomField>
    <fullName>CampaignRecordTypeNameAuto__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CampaignRecordTypeNameAuto</label>
    <type>Text</type>
</CustomField>