unpackaged/main/default/objects/Campaign/fields/Contact_Overview__c.field-meta.xml
<CustomField>
    <fullName>Contact_Overview__c</fullName>
    <label>Contact Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>