unpackaged/main/default/objects/Campaign/fields/enerjyhubCampaignId__c.field-meta.xml
<CustomField>
    <fullName>enerjyhubCampaignId__c</fullName>
    <externalId>true</externalId>
    <label>enerjyhubCampaignId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>