unpackaged/main/default/objects/Campaign/fields/Field_Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Field_Sales_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Sales Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>