unpackaged/main/default/objects/Campaign/fields/IsEndDatePast__c.field-meta.xml
<CustomField>
    <fullName>IsEndDatePast__c</fullName>
    <formula>EndDate &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsEndDatePast</label>
    <type>Checkbox</type>
</CustomField>