unpackaged/main/default/objects/Campaign/fields/Member_Value__c.field-meta.xml
<CustomField>
    <fullName>Member_Value__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Member Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>