unpackaged/main/default/objects/Campaign/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>Outline requirements</description>
    <inlineHelpText>Only use for inside sales campaigns</inlineHelpText>
    <label>Next Steps</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>