unpackaged/main/default/objects/Campaign/fields/Opportunity_Win_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Win_Percentage__c</fullName>
    <formula>IF( NumberOfWonOpportunities &lt;&gt; 0, NumberOfWonOpportunities /  ( Total_Campaign_Members__c ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Win %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>