unpackaged/main/default/objects/Campaign/fields/Other_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Other_Opportunities__c</fullName>
    <description>If not interested, what else can be discussed</description>
    <inlineHelpText>Only use for inside sales campaigns</inlineHelpText>
    <label>Other Opportunities</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>