unpackaged/main/default/objects/Campaign/fields/Prequalifying_Traits__c.field-meta.xml
<CustomField>
    <fullName>Prequalifying_Traits__c</fullName>
    <description>Bullet point the top 10 indicators</description>
    <inlineHelpText>Only use for inside sales campaigns</inlineHelpText>
    <label>Prequalifying Traits</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>