unpackaged/main/default/objects/Campaign/fields/Qualifying_Questions__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Questions__c</fullName>
    <description>Understanding the contact</description>
    <inlineHelpText>Only use for inside sales campaigns</inlineHelpText>
    <label>Qualifying Questions</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>