unpackaged/main/default/objects/Campaign/fields/ROI__c.field-meta.xml
<CustomField>
    <fullName>ROI__c</fullName>
    <formula>AmountWonOpportunities  -   Campaign_Expenses_Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>