unpackaged/main/default/objects/Campaign/fields/The_Pitch__c.field-meta.xml
<CustomField>
    <fullName>The_Pitch__c</fullName>
    <description>Areas to cover with contact</description>
    <inlineHelpText>Only use for inside sales campaigns</inlineHelpText>
    <label>The Pitch</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>