unpackaged/main/default/objects/Campaign/fields/The_Sell__c.field-meta.xml
<CustomField>
    <fullName>The_Sell__c</fullName>
    <description>Outline of product/service</description>
    <inlineHelpText>Only use for inside sales campaigns</inlineHelpText>
    <label>The Sell</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>