unpackaged/main/default/objects/Campaign/fields/Total_Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Campaign_Members__c</fullName>
    <label>Total Campaign Members</label>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>