unpackaged/main/default/objects/Campaign/fields/Total_Member_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Member_Value__c</fullName>
    <formula>Member_Value__c *  (NumberOfLeads +  NumberOfContacts)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Member Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>