unpackaged/main/default/objects/Campaign/listViews/Abi_MXCampaignQ2_2022.listView-meta.xml
<ListView>
    <fullName>Abi_MXCampaignQ2_2022</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Mine</filterScope>
    <label>Abi_MXCampaignQ2_2022</label>
</ListView>