unpackaged/main/default/objects/Campaign/listViews/ActiveSolutionsDivisionCampaigns.listView-meta.xml
<ListView>
    <fullName>ActiveSolutionsDivisionCampaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Division__c</columns>
    <columns>Calendar_Period__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>Software,IT,Data Services,Academy,Majenta</value>
    </filters>
    <label>Active Solutions Division Campaigns</label>
    <sharedTo>
        <group>ITDivisionTeam</group>
        <group>MarketingTeam</group>
        <group>SoftwareDivisionTeam</group>
        <role>GroupDirector</role>
    </sharedTo>
</ListView>