unpackaged/main/default/objects/Campaign/listViews/Contractors_with_Mobiles.listView-meta.xml
<ListView>
    <fullName>Contractors_with_Mobiles</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>equals</operation>
        <value>Contractors with Mobiles</value>
    </filters>
    <label>Contractors with Mobiles</label>
    <sharedTo>
        <group>Casey_O_Donnell</group>
    </sharedTo>
</ListView>