unpackaged/main/default/objects/Campaign/listViews/DfE_Framework_Award_2021_Casey.listView-meta.xml
<ListView>
    <fullName>DfE_Framework_Award_2021_Casey</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Mine</filterScope>
    <label>DfE Framework Award 2021_Casey</label>
    <sharedTo>
        <group>Casey_O_Donnell</group>
        <group>Jack_Stevens</group>
    </sharedTo>
</ListView>